--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,10 @@ application {
     mainClass = 'hexlet.code.App'
 }
 
+run {
+    standardInput = System.in
+}
+
 compileJava {
     options.release = 17
 }
