--- a/app/Makefile
+++ b/app/Makefile
@@ -1,2 +1,11 @@
 run-dist:
 	./build/install/app/bin/app
+
+lint:
+	./gradlew checkstyleMain
+
+build:
+	./gradlew build
+
+clean:
+	./gradlew clean
